# VerbsItaDeu

./: .configure.ac.swp  .gitignore  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  main.c  main.c.orig  menu.c  verbsitadeu
src/include/: menu.h
src/lib/: .#verbs.h  Makefile.am  verbs.c  verbs.c.orig  verbs.h
